# innvestigate

./: .flake8  .gitignore  .pylintrc  README.md  VERSION.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: pythonapp.yml
docs/source/: conf.py
docs/source/modules/: analyzer.rst
examples/: embedding_minimal_example.py  nbconvert.py  readme_code_snippet.py  train_pattern_imagenet.py  utils.py  utils_imagenet.py  utils_mnist.py
examples/notebooks/: sentiment_analysis.ipynb
src/innvestigate/: __init__.py  layers.py
src/innvestigate/analyzer/: __init__.py  base.py  deeplift.py  deeptaylor.py  gradient_based.py  misc.py  network_base.py  pattern_based.py  reverse_base.py  wrapper.py
src/innvestigate/analyzer/relevance_based/: relevance_analyzer.py  relevance_rule.py  utils.py
src/innvestigate/applications/: imagenet.py  mnist.py
src/innvestigate/tools/: __init__.py  pattern.py  perturbate.py
src/innvestigate/utils/: __init__.py  types.py  visualizations.py
src/innvestigate/utils/keras/: __init__.py  backend.py  checks.py  graph.py
src/innvestigate/utils/networks/: __init__.py  base.py  cifar10.py  imagenet.py  mnist.py  trivia.py
tests/: dryrun.py
tests/analyzer/: test_base.py  test_deeplift.py  test_deeptaylor.py  test_full_run.py  test_gradient_based.py  test_init.py  test_misc.py  test_pattern_based.py  test_relevance_based.py  test_wrapper.py
tests/networks/: __init__.py  cifar10.py  imagenet.py  mnist.py
tests/pytest_utils/: dryrun.py  layer.py
tests/tools/: test_pattern.py  test_perturbate.py
tests/utils/: test_checks.py  test_visualizations.py
tests/utils/keras/: test_graph.py
tests/utils/tests/: test_dryrun.py  test_layer.py
